--- a/src/components/Input/index.css
+++ b/src/components/Input/index.css
@@ -22,6 +22,13 @@
   border-bottom-width: 2px;
 }
 
+.Input-loading input {
+  border-color: transparent;
+}
+.Input-loading .Progress-linear {
+  margin-top: -2px;
+}
+
 .Input-label {
   margin-right: 10px;
   font-weight: 600;
