feat: + QQCard for user info

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.mt-4 {
+  margin-top: 16px;
+}
 
 :root {
   --color-primary: #216fdb;
